update to circle pad

--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>LVGL WebBLE Touch (480×480 + D-pad, Safe Zone 45%)</title>
+  <title>LVGL WebBLE — Round Touch + LV_DIR D-pad</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    :root {
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, sans-serif;
-      --btn: clamp(56px, 14vw, 72px);
-    }
+    :root { font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, sans-serif; --btn: clamp(56px, 14vw, 72px); }
     body {
       margin: 0; color: #e6e9ee; background: #0b0d10;
       min-height: 100svh; display: flex; align-items: center; justify-content: center; padding: 16px;
@@ -24,29 +21,23 @@
     button#connect:disabled { opacity: 0.6; cursor: default; }
     #status { opacity: 0.9; font-size: 0.95rem; }
 
-    .canvas-shell {
-      display: inline-block; user-select: none;
-      border: 3px solid #03a9f4; border-radius: 14px; padding: 10px; background: #11161d;
-    }
-    .canvas-frame { position: relative; }
+    .canvas-shell { display: inline-block; user-select: none; border-radius: 50%; padding: 10px; background: #11161d; }
+    /* Round canvas: visual + hit testing */
     canvas#lvgl_canvas {
-      display: block; width: min(92vw, 480px); height: auto; /* responsive CSS size, logical 480×480 */
-      background: #0f1319; outline: 1px dashed #2a3544; cursor: crosshair; touch-action: none;
+      display: block;
+      width: min(92vw, 480px); height: auto; /* CSS size; logical is 480×480 */
+      background: radial-gradient(ellipse at center, #0f1319 0%, #0f1319 60%, #0c1016 100%);
+      border: 4px solid #03a9f4;
+      border-radius: 50%;
+      clip-path: circle(50% at 50% 50%);
+      outline: none;
+      touch-action: none;
+      cursor: crosshair;
     }
-    .safe-zone {
-      position: absolute; left: 0; top: 0; width: 100%; height: 45%;
-      background: linear-gradient(to bottom, rgba(3,169,244,0.18), rgba(3,169,244,0.04));
-      border-bottom: 1px dashed rgba(3,169,244,0.5);
-      pointer-events: none;
-    }
-    .safe-zone span {
-      position: absolute; top: 6px; right: 8px; font-size: 12px; opacity: 0.8;
-      background: rgba(0,0,0,0.35); padding: 2px 6px; border-radius: 6px;
-    }
-    .hint { margin-top: 6px; font-size: 12px; opacity: 0.7; }
     #coords { font-size: 0.95rem; opacity: 0.9; }
+    .banner { display: none; width: 100%; max-width: 480px; background: #ff9800; color: #0b0d10; padding: 10px 12px; border-radius: 10px; font-size: 0.95rem; }
 
-    /* D-pad Cross */
+    /* D-pad cross */
     .dpad {
       display: grid;
       grid-template-columns: var(--btn) var(--btn) var(--btn);
@@ -58,56 +49,56 @@
       border-radius: 16px; border: 0; background: #1a232e; color: #e6e9ee;
       font-size: calc(var(--btn) * 0.35); font-weight: 700; cursor: pointer;
       box-shadow: 0 2px 8px rgba(0,0,0,0.35);
+      touch-action: manipulation;
     }
+    .dpad .empty { width: var(--btn); height: var(--btn); visibility: hidden; }
     .dpad button:disabled { opacity: 0.5; cursor: default; }
-    .empty { width: var(--btn); height: var(--btn); visibility: hidden; }
-
-    .banner { display: none; width: 100%; max-width: 480px; background: #ff9800; color: #0b0d10;
-      padding: 10px 12px; border-radius: 10px; font-size: 0.95rem; }
   </style>
 </head>
 <body>
   <div class="wrap">
-    <h1>LVGL WebBLE Touch (480×480)</h1>
+    <h1>LVGL WebBLE — Round Touch + LV_DIR D-pad</h1>
 
     <div class="controls">
-      <button id="connect" aria-label="Connect to BLE Touch">Connect Touch BLE</button>
+      <button id="connect" aria-label="Connect to BLE">Connect</button>
       <span id="status">Not connected</span>
     </div>
 
     <div class="canvas-shell">
-      <div class="canvas-frame">
-        <canvas id="lvgl_canvas" width="480" height="480"></canvas>
-        <div class="safe-zone"><span>Safe swipe zone (top 45%)</span></div>
-      </div>
-      <div class="hint">Pointer works everywhere; D-pad swipes are limited to the highlighted band.</div>
+      <canvas id="lvgl_canvas" width="480" height="480" aria-label="Round touch surface"></canvas>
     </div>
 
     <div id="coords">x: –, y: –, pressed: –</div>
     <div id="banner" class="banner"></div>
 
-    <!-- D-pad as a cross -->
-    <div class="dpad" role="group" aria-label="Swipe controls">
+    <!-- 
+    <div class="dpad" role="group" aria-label="LVGL directions">
       <div class="empty"></div>
-      <button id="btnUp"    aria-label="Swipe up">▲</button>
+      <button id="btnUp"    aria-label="Top (LV_DIR_TOP)">▲</button>
       <div class="empty"></div>
 
-      <button id="btnLeft"  aria-label="Swipe left">◀</button>
+      <button id="btnLeft"  aria-label="Left (LV_DIR_LEFT)">◀</button>
       <div class="empty"></div>
-      <button id="btnRight" aria-label="Swipe right">▶</button>
+      <button id="btnRight" aria-label="Right (LV_DIR_RIGHT)">▶</button>
 
       <div class="empty"></div>
-      <button id="btnDown"  aria-label="Swipe down">▼</button>
+      <button id="btnDown"  aria-label="Bottom (LV_DIR_BOTTOM)">▼</button>
       <div class="empty"></div>
-    </div>
+    </div>-->
   </div>
 
   <script>
-    // UUIDs – set to match your ESP32
+    // ==== UUIDs (set to match your ESP32) ====
     const TOUCH_SERVICE_UUID = '12345678-1234-5678-1234-56789abcdef0';
-    const TOUCH_CHAR_UUID    = '12345678-1234-5678-1234-56789abcdea1';
+    const TOUCH_CHAR_UUID    = '12345678-1234-5678-1234-56789abcdea1'; // 5-byte pointer [xHi,xLo,yHi,yLo,state]
+    const KEYS_CHAR_UUID     = '12345678-1234-5678-1234-56789abcdea2'; // 1-byte LV_DIR_*
 
-    let touchChar = null, isDown = false, swiping = false;
+    // LVGL direction constants (v8): LEFT=1, RIGHT=2, TOP=4, BOTTOM=8
+    const LV = { LEFT:1, RIGHT:2, TOP:4, BOTTOM:8 };
+
+    let touchChar = null, keysChar = null;
+    let isDown = false;
+
     const connectBtn = document.getElementById('connect');
     const statusEl   = document.getElementById('status');
     const coordsEl   = document.getElementById('coords');
@@ -119,22 +110,17 @@
     const btnLeft = document.getElementById('btnLeft');
     const btnRight = document.getElementById('btnRight');
 
-    function setDpadEnabled(enabled) {
+    function setDpadEnabled(enabled){
       [btnUp, btnDown, btnLeft, btnRight].forEach(b => b.disabled = !enabled);
     }
     setDpadEnabled(false);
 
-    // Feature detection + iOS heads-up
+    // Feature detection hint
     (function supportCheck(){
       const isWebBT = ('bluetooth' in navigator);
-      const ua = navigator.userAgent || '';
-      const isiOS = /iPad|iPhone|iPod/.test(ua) || (navigator.platform === 'MacIntel' && navigator.maxTouchPoints > 1);
       if (!isWebBT) {
         bannerEl.style.display = 'block';
         bannerEl.textContent = 'Web Bluetooth is not supported in this browser.';
-      } else if (isiOS) {
-        bannerEl.style.display = 'block';
-        bannerEl.textContent = 'iOS/iPadOS Safari/Chrome lack Web Bluetooth. Use a Web Bluetooth–enabled app-browser (e.g., Bluefy).';
       }
     })();
 
@@ -146,6 +132,19 @@
       const x  = Math.round((e.clientX - r.left) * sx);
       const y  = Math.round((e.clientY - r.top)  * sy);
       return { x, y };
+    }
+
+    // Clamp point to circle (centered circle with radius = min(w,h)/2)
+    function clampToCircle(x, y) {
+      const W = canvas.width, H = canvas.height;
+      const cx = W / 2, cy = H / 2;
+      const dx = x - cx, dy = y - cy;
+      const r  = Math.min(W, H) / 2;
+      const d2 = dx*dx + dy*dy;
+      if (d2 <= r*r) return { x: Math.round(x), y: Math.round(y) };
+      const d = Math.sqrt(d2) || 1;
+      const k = r / d;
+      return { x: Math.round(cx + dx * k), y: Math.round(cy + dy * k) };
     }
 
     async function connectBLE() {
@@ -161,7 +160,7 @@
         });
         device.addEventListener('gattserverdisconnected', () => {
           statusEl.textContent = 'Disconnected';
-          touchChar = null;
+          touchChar = null; keysChar = null;
           connectBtn.disabled = false;
           setDpadEnabled(false);
         });
@@ -172,11 +171,18 @@
         statusEl.textContent = 'Getting service…';
         const svc = await gatt.getPrimaryService(TOUCH_SERVICE_UUID);
 
-        statusEl.textContent = 'Getting characteristic…';
+        statusEl.textContent = 'Getting characteristics…';
         touchChar = await svc.getCharacteristic(TOUCH_CHAR_UUID);
 
-        statusEl.textContent = 'BLE touch ready';
-        setDpadEnabled(true);
+        try {
+          keysChar = await svc.getCharacteristic(KEYS_CHAR_UUID);
+          setDpadEnabled(true);
+        } catch (e) {
+          console.warn('Keys characteristic not found:', e);
+          setDpadEnabled(false);
+        }
+
+        statusEl.textContent = keysChar ? 'BLE ready (touch + LV_DIR keys)' : 'BLE ready (touch only)';
       } catch (err) {
         console.error(err);
         statusEl.textContent = 'Error: ' + (err?.message || err);
@@ -185,114 +191,71 @@
     }
     connectBtn.addEventListener('click', connectBLE);
 
-    // Send: [X_hi, X_lo, Y_hi, Y_lo, State]
+    // ----- Touch sender: [X_hi, X_lo, Y_hi, Y_lo, State] -----
     function sendTouch(x, y, down) {
       coordsEl.textContent = `x: ${x}, y: ${y}, pressed: ${down ? 'yes' : 'no'}`;
       if (!touchChar) return;
       const buf = new ArrayBuffer(5);
       const v   = new DataView(buf);
-      v.setUint16(0, x, false);
-      v.setUint16(2, y, false);
+      v.setUint16(0, x, false);   // big-endian
+      v.setUint16(2, y, false);   // big-endian
       v.setUint8 (4, down ? 1 : 0);
       touchChar.writeValueWithoutResponse(buf).catch(async () => {
-        try { await touchChar.writeValue(buf); } catch (_) {}
+        try { await touchChar.writeValue(buf); } catch(_) {}
       });
     }
 
-    // Pointer events (still supported)
+    // ----- LV_DIR sender: 1 byte -----
+    function sendDir(dirByte) {
+      if (!keysChar) return;
+      const buf = new Uint8Array([dirByte & 0xFF]);
+      keysChar.writeValueWithoutResponse(buf).catch(async () => {
+        try { await keysChar.writeValue(buf); } catch(_) {}
+      });
+    }
+
+    // Round-canvas pointer events
     canvas.addEventListener('pointermove', (e) => {
       const {x, y} = canvasXY(e);
+      const p = clampToCircle(x, y);
       const down = e.pointerType === 'mouse' ? !!e.buttons : isDown;
-      sendTouch(x, y, down);
+      sendTouch(p.x, p.y, down);
       e.preventDefault();
     }, { passive: false });
+
     canvas.addEventListener('pointerdown', (e) => {
       isDown = true; canvas.setPointerCapture(e.pointerId);
       const {x, y} = canvasXY(e);
-      sendTouch(x, y, true); e.preventDefault();
+      const p = clampToCircle(x, y);
+      sendTouch(p.x, p.y, true);
+      e.preventDefault();
     }, { passive: false });
+
     function endPointer(e) {
-      isDown = false; const {x, y} = canvasXY(e);
-      sendTouch(x, y, false); e.preventDefault();
+      isDown = false;
+      const {x, y} = canvasXY(e);
+      const p = clampToCircle(x, y);
+      sendTouch(p.x, p.y, false);
+      e.preventDefault();
     }
     canvas.addEventListener('pointerup', endPointer, { passive: false });
     canvas.addEventListener('pointercancel', endPointer, { passive: false });
     canvas.addEventListener('pointerleave', endPointer, { passive: false });
     canvas.addEventListener('contextmenu', (e) => e.preventDefault());
 
-    // --------- D-pad swipes restricted to top 45% ----------
-    const SAFE_ZONE_FRAC       = 0.45;
-    const SWIPE_DURATION_MS    = 180;
-    const SWIPE_STEPS          = 10;
-    const H_SPAN_FRAC          = 0.50;
-    const V_SPAN_FRAC_IN_BAND  = 0.80;
+    // D-pad buttons (send LV_DIR byte)
+    btnUp   .addEventListener('pointerdown', e => { sendDir(LV.TOP);    e.preventDefault(); });
+    btnDown .addEventListener('pointerdown', e => { sendDir(LV.BOTTOM); e.preventDefault(); });
+    btnLeft .addEventListener('pointerdown', e => { sendDir(LV.LEFT);   e.preventDefault(); });
+    btnRight.addEventListener('pointerdown', e => { sendDir(LV.RIGHT);  e.preventDefault(); });
 
-    function animateSwipe(x0, y0, x1, y1, done) {
-      if (swiping) return;
-      swiping = true;
-      sendTouch(x0, y0, true);
-      const start = performance.now();
-      function tick(now) {
-        const t = Math.min(1, (now - start) / SWIPE_DURATION_MS);
-        const x = Math.round(x0 + (x1 - x0) * t);
-        const y = Math.round(y0 + (y1 - y0) * t);
-        sendTouch(x, y, true);
-        if (t < 1) requestAnimationFrame(tick);
-        else { sendTouch(x1, y1, false); swiping = false; done && done(); }
-      }
-      requestAnimationFrame(tick);
-    }
-
-    function doSwipe(dir) {
-      if (!touchChar || swiping) return;
-
-      const W = canvas.width, H = canvas.height;
-      const bandH = Math.max(1, Math.floor(H * SAFE_ZONE_FRAC));
-      const yMid  = Math.floor(bandH / 2);
-      const xMid  = Math.floor(W / 2);
-
-      const spanX = Math.floor(W * H_SPAN_FRAC);
-      const spanY = Math.floor(bandH * V_SPAN_FRAC_IN_BAND);
-
-      const clamp = (v, lo, hi) => Math.min(hi, Math.max(lo, v));
-
-      let x0 = xMid, y0 = yMid, x1 = xMid, y1 = yMid;
-
-      if (dir === 'left')  {
-        x0 = clamp(xMid + Math.floor(spanX/2), 0, W-1);
-        x1 = clamp(xMid - Math.floor(spanX/2), 0, W-1);
-        y0 = y1 = yMid;
-      }
-      if (dir === 'right') {
-        x0 = clamp(xMid - Math.floor(spanX/2), 0, W-1);
-        x1 = clamp(xMid + Math.floor(spanX/2), 0, W-1);
-        y0 = y1 = yMid;
-      }
-      if (dir === 'up') {
-        y0 = clamp(yMid + Math.floor(spanY/2), 0, bandH-1);
-        y1 = clamp(yMid - Math.floor(spanY/2), 0, bandH-1);
-        x0 = x1 = xMid;
-      }
-      if (dir === 'down') {
-        y0 = clamp(yMid - Math.floor(spanY/2), 0, bandH-1);
-        y1 = clamp(yMid + Math.floor(spanY/2), 0, bandH-1);
-        x0 = x1 = xMid;
-      }
-      animateSwipe(x0, y0, x1, y1);
-    }
-
-    // SWAPPED left/right
-    btnLeft .addEventListener('click', () => doSwipe('right'));
-    btnRight.addEventListener('click', () => doSwipe('left'));
-    btnUp   .addEventListener('click', () => doSwipe('down'));
-    btnDown .addEventListener('click', () => doSwipe('up'));
-
-    // Arrow keys swapped too
+    // Optional keyboard on desktop
     window.addEventListener('keydown', (e) => {
-      if (e.key === 'ArrowUp')    { doSwipe('down');  e.preventDefault(); }
-      if (e.key === 'ArrowDown')  { doSwipe('up');    e.preventDefault(); }
-      if (e.key === 'ArrowLeft')  { doSwipe('right'); e.preventDefault(); }
-      if (e.key === 'ArrowRight') { doSwipe('left');  e.preventDefault(); }
+      if (e.repeat) return;
+      if (e.key === 'ArrowUp')    { sendDir(LV.TOP);    e.preventDefault(); }
+      if (e.key === 'ArrowDown')  { sendDir(LV.BOTTOM); e.preventDefault(); }
+      if (e.key === 'ArrowLeft')  { sendDir(LV.LEFT);   e.preventDefault(); }
+      if (e.key === 'ArrowRight') { sendDir(LV.RIGHT);  e.preventDefault(); }
     });
   </script>
 </body>
