--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     /* D-pad cross */
     .dpad {
-      display: none;
+      display: grid;
       grid-template-columns: var(--btn) var(--btn) var(--btn);
       grid-template-rows: var(--btn) var(--btn) var(--btn);
       gap: 12px; margin-top: 6px; justify-items: center; align-items: center;
@@ -94,7 +94,7 @@
     const KEYS_CHAR_UUID     = '12345678-1234-5678-1234-56789abcdea2'; // 1-byte LV_DIR_*
 
     // LVGL direction constants (v8): LEFT=1, RIGHT=2, TOP=4, BOTTOM=8
-    const LV = { LEFT:1, RIGHT:2, TOP:4, BOTTOM:8 };
+    const LV = { LEFT:2, RIGHT:1, TOP:8, BOTTOM:4 };
 
     let touchChar = null, keysChar = null;
     let isDown = false;
