--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     .canvas-shell { position: relative; display: inline-block; user-select: none; border-radius: 50%; padding: 10px; background: #11161d; }
     canvas#lvgl_canvas {
       display: block;
-      width: min(92vw, 480px); height: auto; /* CSS size; logical 480×480 */
+      width: min(92vw, 320px); height: auto; /* CSS size; logical 320×320 */
       background: radial-gradient(ellipse at center, #0f1319 0%, #0f1319 60%, #0c1016 100%);
       border: 4px solid #03a9f4;
       border-radius: 50%;
@@ -33,8 +33,8 @@
       touch-action: none;
       cursor: crosshair;
     }
-    #coords { font-size: 0.95rem; opacity: 0.9; }
-    .banner { display: none; width: 100%; max-width: 480px; background: #ff9800; color: #0b0d10; padding: 10px 12px; border-radius: 10px; font-size: 0.95rem; }
+    #coords { font-size: 0.95rem; opacity: 0.9; display: none;}
+    .banner { display: none; width: 100%; max-width: 320px; background: #ff9800; color: #0b0d10; padding: 10px 12px; border-radius: 10px; font-size: 0.95rem; }
 
     /* D-pad cross */
     .dpad {
@@ -57,7 +57,7 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>LVGL WebBLE — Round Touch + D-pad w/ Center</h1>
+    <h1>SmartRosary Web Touch</h1>
 
     <div class="controls">
       <button id="connect" aria-label="Connect to BLE">Connect</button>
@@ -65,7 +65,7 @@
     </div>
 
     <div class="canvas-shell">
-      <canvas id="lvgl_canvas" width="480" height="480" aria-label="Round touch surface"></canvas>
+      <canvas id="lvgl_canvas" width="320" height="320" aria-label="Round touch surface"></canvas>
     </div>
 
     <div id="coords">x: –, y: –, pressed: –</div>
@@ -94,7 +94,7 @@
     const KEYS_CHAR_UUID     = '12345678-1234-5678-1234-56789abcdea2'; // 1-byte command
 
     // LVGL direction constants (v8)
-    const LV = { LEFT:1, RIGHT:2, TOP:4, BOTTOM:8 };
+    const LV = { LEFT:2, RIGHT:1, TOP:8, BOTTOM:4 };
     const CMD_CENTER = 16; // middle knob command
 
     let touchChar = null, keysChar = null;
