--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <title>LVGL WebBLE — Round Touch + D-pad w/ Center</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <style>
     :root { font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, sans-serif; --btn: clamp(56px, 14vw, 72px); }
     body {
